refactor : AiIntelligenceService localDateTime request 에 추가에 따른 코드 수정